--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h2>PANCAKES</h2>
                     <img src="pancake1.jpg"/>
                     <article class="item">
-                        <p class="pan">Crepes Suzette</p><p class="price">$10</p>
+                        <h3 class="pan">Crepes Suzette</h3><p class="price">$10</p>
                     </article>
                     <article class="item">
                         <p class="pan">Tropical Pancakes</p><p class="price">$12</p>
